--- a/index.css
+++ b/index.css
@@ -6,102 +6,56 @@
 }
 
 :root {
-    --bg-color: #f3f7f9;
-    --main-text: #444444;
-    --dark-text: #222222;
-    --highlight-color: #9dc2e8;
+    font-size: 16px;
+    --main-text: #e1e1e1;
+    --bg-color: #191b1f;
+    --blue: #3eb0ef;
+    --green: #a4d037;
 }
 
 body {
+    height: 100vh;
+    width: 100vw;
     background-color: var(--bg-color);
     color: var(--main-text);
 }
 
-hr {
-    border: solid 0.5px #dedede;
-    margin: 15px 0px;
-}
-
-.title {
-    font-size: 2.5rem;
-    font-weight: bold;
-    color: var(--dark-text);
-}
-
-.subtitle {
-    font-size: 1.15rem;
-}
-
-.checkbox {
+#wrap {
     display: flex;
     align-items: center;
-}
-
-.checkbox input {
-    cursor: pointer;
-}
-
-.checkbox-label {
-    margin-left: 10px;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
 }
 
 button.button {
-    font-size: 1rem;
-    padding: 6px 12px;
+    padding: 10px 20px;
     border-radius: 6px;
-    font-weight: 600;
+    font-size: 1rem;
+    font-weight: bold;
     border: none;
-    color: var(--main-text);
-    background-color: var(--highlight-color);
     outline: none;
     transition: 0.15s;
 }
 
 button.button:hover {
     cursor: pointer;
-    box-shadow: inset 0px 0px 1000px rgba(0, 0, 0, 0.16);
-    color: #ffffff;
+    box-shadow: inset 0px 0px 1000px rgba(0, 0, 0, 0.25);
 }
 
-#wrap {
-    height: 100vh;
-    width: 100vw;
-    display: flex;
+button.button.is-big {
+    font-size: 2rem;
+    padding: 20px 40px;
 }
 
-#left {
-    padding: 30px;
-    width: 400px;
-    background-color: #f8f8f8;
-    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.16);
-    z-index: 3;
+button.button.is-green {
+    background-color: var(--green);
 }
 
-#right {
-    flex-grow: 1;
-    padding: 30px;
-    position: relative;
+button.button.is-green:hover {
+    color: var(--main-text);
 }
 
-#not-supported {
+#model {
     display: none;
-    height: 100vh;
-    width: 100vw;
-    padding: 30px;
-    align-items: center;
-    justify-content: center;
-}
-
-#not-supported > .subtitle {
-    text-align: center;
-    font-weight: 600;
-}
-
-@media (max-width: 800px) {
-    #wrap {
-        display: none;
-    }
-    #not-supported {
-        display: flex;
-    }
 }
